--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Bethel Church</title>
 </head>
@@ -36,15 +37,64 @@
                 </div>
             </li>
         </ul>
+
+        <div class="row">
+            <div class="col s12" id="headerContainer">
+                <div>
+                    <h1 id="headerFont" class="center-align"><b>Iglesia Cristiana Bethel</b>
+                    </h1>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l4 s12">
+                    <h5>Iglesia Cristiana Bethel</h5>
+                    <p>2999 Marquette Ave
+                        Sanford, FL 32773
+                    </p>
+                    <p>(407) 324-2096
+                    </p>
+                </div>
+                <div class="col l4 s12">
+                    <h5 class=>Menu</h5>
+                    <ul>
+                        <li><a class="white-text" href="#!">Home</a></li>
+                        <li><a class="white-text" href="#!">Service</a></li>
+                        <li><a class="white-text" href="#!">Contact</a></li>
+                        <li><a class="white-text" href="#!">Gallery</a></li>
+                    </ul>
+                </div>
+                <div class="col l4 s12">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13990.130910703649!2d-81.2272552!3d28.7633651!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x909b14dafb3c992c!2sIglesia%20Cristiana%20Bethel!5e0!3m2!1sen!2sus!4v1577585342087!5m2!1sen!2sus"
+                        frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    <div class="fb-like"
+                        data-href="https://www.facebook.com/pages/category/Christian-Church/Iglesia-Cristiana-Bethel-139275766143368/"
+                        data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div>
+                </div>
+            </div>
+        </div>
+        <div class="page-footer">
+            <div class="container section grey-text">
+                © 2014 Copyright
+            </div>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
-    </script>
     </script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var elems = document.querySelectorAll('.sidenav');
             var instances = M.Sidenav.init(elems);
-        });</script>
+        });
+    </script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0"></script>
 </body>
 
 </html>
