--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="container section">
         <a href="#" class="sidenav-trigger" data-target="menu-side">
-            <i class="material-icons">menu</i>
+            <i class="material-icons" id="material-icons-menu">menu</i>
         </a>
 
         <ul class="sidenav" id="menu-side">
@@ -35,6 +35,10 @@
                         <span class="email grey-text" id="menuFont">bethel@gmail.com</span>
                     </a>
                 </div>
+            <li><a href="#!"><i class="material-icons">home</i>Home</a></li>
+            <li><a href="#!"><i class="material-icons">music_note</i>Service</a></li>
+            <li><a href="#!"><i class="material-icons">photo</i>Gallery</a></li>
+            <li><a href="#!"><i class="material-icons">mail</i>Contact</a></li>
             </li>
         </ul>
 
@@ -43,6 +47,20 @@
                 <div>
                     <h1 id="headerFont" class="center-align"><b>Iglesia Cristiana Bethel</b>
                     </h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 z-depth-5" id="mainBody">
+                <div>
+                    <h3 id="mainFont"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque adipisci,
+                            vitae quia perferendis omnis, nemo facilis provident numquam repudiandae nobis, ad saepe
+                            enim quaerat facere nam possimus officia ipsa eligendi. Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Amet doloremque tempore quaerat quisquam illum doloribus unde
+                            eveniet provident explicabo, eos numquam? Eius error voluptates a ad et consequatur eveniet
+                            ipsam.</b>
+                    </h3>
                 </div>
             </div>
         </div>
