--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     </a>
                 </div>
             <li><a href="#!"><i class="material-icons">home</i>Home</a></li>
-            <li><a href="#!"><i class="material-icons">music_note</i>Service</a></li>
-            <li><a href="#!"><i class="material-icons">photo</i>Gallery</a></li>
-            <li><a href="#!"><i class="material-icons">mail</i>Contact</a></li>
+            <li><a href="#!"><i class="material-icons">people</i>Quiénes Somos</a></li>
+            <li><a href="#!"><i class="material-icons">notifications</i>Anuncios</a></li>
+            <li><a href="#!"><i class="material-icons">business_center</i>Equipo Pastoral</a></li>
             </li>
         </ul>
 
@@ -50,21 +50,47 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col s12 z-depth-5" id="mainBody">
-                <div>
-                    <h3 id="mainFont"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque adipisci,
+    <div class="row" style="margin-bottom: 0;">
+        <div class="col s12" id="mainBody">
+            <div class="col l7" style="float: none; margin: auto;" id="mainBodyPic">
+                <img src="assets/images/churchImage.jpg" id="churchPic">
+                <!-- <h3 id="mainFont"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque adipisci,
                             vitae quia perferendis omnis, nemo facilis provident numquam repudiandae nobis, ad saepe
                             enim quaerat facere nam possimus officia ipsa eligendi. Lorem ipsum dolor sit amet
                             consectetur adipisicing elit. Amet doloremque tempore quaerat quisquam illum doloribus unde
                             eveniet provident explicabo, eos numquam? Eius error voluptates a ad et consequatur eveniet
                             ipsam.</b>
-                    </h3>
-                </div>
+                    </h3> -->
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col s12" id="secMainBod">
+            <div class="col l6 center-align" style="border-right: 4px solid rgba(83, 142, 179, 0.795);"
+                id="contactInfo">
+                <h3>Información de contacto:</h3>
+                <h5>2999 Marquette Ave
+                    Sanford, FL 32773</h5>
+                <h5>(407) 324-2096</h5>
+                <h5>bethel@gmail.com</h5>
+            </div>
+            <div class="col l6 center-align" id="contactInfo">
+                <h3>Servicios:</h3>
+                <h5>Lunes - Culto en los hogares</h5>
+                <h5>Miércoles - Culto de oración</h5>
+                <h5>Viernes - Culto familiar</h5>
+                <h5>Domingo -
+                    Escuela Dominical 10am<br>
+                    Servicio Evangelístico 11:15am
+                </h5>
+
+            </div>
+        </div>
+    </div>
+
 
     <footer class="page-footer">
         <div class="container">
@@ -81,9 +107,9 @@
                     <h5 class=>Menu</h5>
                     <ul>
                         <li><a class="white-text" href="#!">Home</a></li>
-                        <li><a class="white-text" href="#!">Service</a></li>
-                        <li><a class="white-text" href="#!">Contact</a></li>
-                        <li><a class="white-text" href="#!">Gallery</a></li>
+                        <li><a class="white-text" href="#!">Quiénes Somos</a></li>
+                        <li><a class="white-text" href="#!">Anuncios</a></li>
+                        <li><a class="white-text" href="#!">Equipo Pastoral</a></li>
                     </ul>
                 </div>
                 <div class="col l4 s12">
@@ -109,6 +135,19 @@
             var elems = document.querySelectorAll('.sidenav');
             var instances = M.Sidenav.init(elems);
         });
+
+        (function () {
+
+            var img = document.getElementById('#mainBodyPic').firstChild;
+            img.onload = function () {
+                if (img.height > img.width) {
+                    img.height = '100%';
+                    img.width = 'auto';
+                }
+            };
+
+        }());
+
     </script>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous"
