--- a/aboutUs.html
+++ b/aboutUs.html
@@ -43,7 +43,7 @@
         </ul>
 
         <div class="row">
-            <div class="col s12" id="headerContainer">
+            <div class="col s12" style="margin-bottom: 0;" id="headerContainer">
                 <div>
                     <h1 id="headerFont" class="center-align"><b>Quiénes Somos</b>
                     </h1>
@@ -52,7 +52,18 @@
         </div>
     </div>
 
-
+    <div class="row" style="margin-bottom: 15rem;">
+        <div class="col l7" style="float: none; margin: auto;" id="aboutUsCont">
+            <h3 id="mainFont">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem id facilis eaque natus
+                fuga perferendis
+                praesentium commodi similique sunt beatae nesciunt non impedit perspiciatis, aspernatur odit,
+                exercitationem quae dolor doloribus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore
+                excepturi soluta consequatur aut eius quaerat consectetur optio magnam corrupti vel. Saepe illo maxime,
+                tenetur sint perferendis neque eveniet obcaecati iusto! Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Animi adipisci fugiat cumque voluptatibus voluptate quidem, omnis cupiditate nostrum
+                aperiam rerum quod tempora saepe obcaecati laudantium perspiciatis! Beatae sequi voluptatum rerum?</h3>
+        </div>
+    </div>
 
 
     <footer class="page-footer">
