finished aboutus page. Started staff and announcments page.

--- a/annoucements.html
+++ b/annoucements.html
@@ -45,29 +45,10 @@
         <div class="row">
             <div class="col s12" style="margin-bottom: 0;" id="headerContainer">
                 <div>
-                    <h1 id="headerFont" class="center-align"><b>Quiénes Somos</b>
+                    <h1 id="headerFont" class="center-align"><b>Anuncios</b>
                     </h1>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row" style="margin-bottom: 15rem;">
-        <div class="col l7" style="float: none; margin: auto;" id="aboutUsCont">
-            <h2 id="mainFont" class="center-align">Declaración de Doctrina y Principios</h2>
-            <p id="mainFont2">Esta Iglesia reconoce La Biblia como la Palabra de Dios que contiene la revelación del
-                plan de Dios para
-                la salvación del hombre.</p>
-
-            <p id="mainFont2">Reconoce La Biblia como suficiente norma de fe, doctrina, y conducta cristiana; como
-                resúmen de los
-                principios y normas que tienen que ver con la conducta cristiana de sus miembros.</p>
-
-            <p id="mainFont2">La Iglesia Cristiana Bethel, Inc. prohíbe la solemnización matrimonial a parejas que son
-                del mismo sexo.
-                La Santa Biblia, como nuestra base fundamental de fe, establece que “varón y hembra los creó” (Génesis
-                1:26). Esto deja asentado que unión matrimonial ha sido establecido para personas de sexos opuestos.
-            </p>
         </div>
     </div>
 
