--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </div>
             <li><a href="index.html"><i class="material-icons">home</i>Home</a></li>
             <li><a href="aboutUs.html"><i class="material-icons">people</i>Quiénes Somos</a></li>
-            <li><a href="#!"><i class="material-icons">notifications</i>Anuncios</a></li>
-            <li><a href="#!"><i class="material-icons">business_center</i>Equipo Pastoral</a></li>
+            <li><a href="annoucements.html"><i class="material-icons">notifications</i>Anuncios</a></li>
+            <li><a href="staff.html"><i class="material-icons">business_center</i>Equipo Pastoral</a></li>
             </li>
         </ul>
 
@@ -56,13 +56,6 @@
         <div class="col s12" id="mainBody">
             <div class="col l7" style="float: none; margin: auto;" id="mainBodyPic">
                 <img src="assets/images/churchImage.jpg" id="churchPic">
-                <!-- <h3 id="mainFont"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque adipisci,
-                            vitae quia perferendis omnis, nemo facilis provident numquam repudiandae nobis, ad saepe
-                            enim quaerat facere nam possimus officia ipsa eligendi. Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Amet doloremque tempore quaerat quisquam illum doloribus unde
-                            eveniet provident explicabo, eos numquam? Eius error voluptates a ad et consequatur eveniet
-                            ipsam.</b>
-                    </h3> -->
             </div>
         </div>
     </div>
@@ -108,8 +101,8 @@
                     <ul>
                         <li><a class="white-text" href="index.html">Home</a></li>
                         <li><a class="white-text" href="aboutUs.html">Quiénes Somos</a></li>
-                        <li><a class="white-text" href="#!">Anuncios</a></li>
-                        <li><a class="white-text" href="#!">Equipo Pastoral</a></li>
+                        <li><a class="white-text" href="annoucements.html">Anuncios</a></li>
+                        <li><a class="white-text" href="staff.html">Equipo Pastoral</a></li>
                     </ul>
                 </div>
                 <div class="col l4 s12">
