finished staff page.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <div class="row" style="margin-bottom: 0;">
         <div class="col s12" id="mainBody">
-            <div class="col l7" style="float: none; margin: auto;" id="mainBodyPic">
-                <img src="assets/images/churchImage.jpg" id="churchPic">
+            <div class="col l5" style="float: none; margin: auto;" id="mainBodyPic">
+                <img src="assets/images/churchPic.png" id="churchPic">
             </div>
         </div>
     </div>
@@ -76,10 +76,9 @@
                 <h5>Miércoles - Culto de oración</h5>
                 <h5>Viernes - Culto familiar</h5>
                 <h5>Domingo -
-                    Escuela Dominical 10am<br>
+                    Escuela Dominical 10am / <br>
                     Servicio Evangelístico 11:15am
                 </h5>
-
             </div>
         </div>
     </div>
