--- a/annoucements.html
+++ b/annoucements.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>Bethel Church</title>
 </head>
 
@@ -50,6 +50,34 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/bibleImage.jpg"></div>
+    </div>
+    <div class="section white">
+        <div class="row container">
+            <div class="row">
+                <!-- <h1 class="header center-align">Anuncios</h1> -->
+            </div>
+            <div class="row">
+                <div class="col s4 center-align">
+                    <a href="#"
+                        style="float: none; margin: auto; color: grey; font-size: 3rem; font-family: monospace;">Programa</a>
+                </div>
+                <div class="col s4 center-align">
+                    <a href="#"
+                        style="float: none; margin: auto; color: grey; font-size: 3rem; font-family: monospace;">Diezmos</a>
+                </div>
+                <div class="col s4 center-align">
+                    <a href="#"
+                        style="float: none; margin: auto; color: grey; font-size: 3rem; font-family: monospace;">Membresía</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="assets/images/annoucementsPic.jpg"></div>
     </div>
 
 
@@ -96,6 +124,12 @@
             var elems = document.querySelectorAll('.sidenav');
             var instances = M.Sidenav.init(elems);
         });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('.parallax');
+            var instances = M.Parallax.init(elems);
+        });
+
 
     </script>
     <div id="fb-root"></div>
