--- a/staff.html
+++ b/staff.html
@@ -43,7 +43,7 @@
         </ul>
 
         <div class="row">
-            <div class="col s12" style="margin-bottom: 0;" id="headerContainer">
+            <div class="col s12" style="margin-bottom: 5rem;" id="headerContainer">
                 <div>
                     <h1 id="headerFont" class="center-align"><b>Equipo Pastoral</b>
                     </h1>
@@ -52,6 +52,81 @@
         </div>
     </div>
 
+    <div class="container" id="staffCont">
+        <div class="row">
+            <div class="col s12 l6">
+                <div class="col l8 offset-l2">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/images/lili.jpg">
+                        </div>
+                        <div class="card-content center-align">
+                            <h3 id="mainFont" style="margin: 0; padding: 0;">Senior Pastor</h3>
+                            <h5>Lili Roman-Sotolongo</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 l6">
+                <div class="col l8 offset-l2">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/images/archie.jpg">
+                        </div>
+                        <div class="card-content center-align">
+                            <h3 id="mainFont" style="margin: 0; padding: 0;">Assistant Pastor</h3>
+                            <h5>Archie Roman-Sotolongo</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 l6">
+                <div class="col l8 offset-l2">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/images/stella.JPG">
+                        </div>
+                        <div class="card-content center-align">
+                            <h3 id="mainFont" style="margin: 0; padding: 0;">Secretary</h3>
+                            <h5>Stella Roman-Sotolongo</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 l6">
+                <div class="col l8 offset-l2">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/images/frankie.jpg">
+                        </div>
+                        <div class="card-content center-align">
+                            <h3 id="mainFont" style="margin: 0; padding: 0;">Decon</h3>
+                            <h5>Frankie Roman-Sotolongo</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 l6">
+                <div class="col l8 offset-l2">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/images/virginia.jpg">
+                        </div>
+                        <div class="card-content center-align">
+                            <h3 id="mainFont" style="margin: 0; padding: 0;">Diaconisa</h3>
+                            <h5>Hermana Virginia</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="page-footer">
         <div class="container">
@@ -79,7 +154,8 @@
                         frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     <div class="fb-like"
                         data-href="https://www.facebook.com/pages/category/Christian-Church/Iglesia-Cristiana-Bethel-139275766143368/"
-                        data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div>
+                        data-width="" data-layout="button" data-action="like" data-size="small" data-share="true">
+                    </div>
                 </div>
             </div>
         </div>
@@ -96,6 +172,18 @@
             var elems = document.querySelectorAll('.sidenav');
             var instances = M.Sidenav.init(elems);
         });
+
+        (function () {
+
+            var img = document.getElementById('card-image').firstChild;
+            img.onload = function () {
+                if (img.height > img.width) {
+                    img.height = '100%';
+                    img.width = 'auto';
+                }
+            };
+
+        }());
 
     </script>
     <div id="fb-root"></div>
