--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 
     <div class="row">
         <div class="col s12" id="secMainBod">
-            <div class="col l6 center-align" style="border-right: 4px solid rgba(83, 142, 179, 0.795);"
-                id="contactInfo">
+            <div class="col l6 center-align" style="border-right: 4px solid rgb(0, 225, 255);" id="contactInfo">
                 <h3>Información de contacto:</h3>
                 <h5>2999 Marquette Ave
                     Sanford, FL 32773</h5>
