--- a/aboutUs.html
+++ b/aboutUs.html
@@ -104,7 +104,7 @@
         </div>
         <div class="page-footer">
             <div class="container section grey-text">
-                © 2014 Copyright
+                Copyright Iglesia Cristiana Bethel / Web Dynamic 2020
             </div>
         </div>
     </footer>
