updated placeholder images for staff.

--- a/staff.html
+++ b/staff.html
@@ -58,7 +58,7 @@
                 <div class="col l8 offset-l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/images/lili.jpg">
+                            <img src="assets/images/pastorPlaceholder.jpg">
                         </div>
                         <div class="card-content center-align">
                             <h3 id="mainFont" style="margin: 0; padding: 0;">Senior Pastor</h3>
@@ -71,7 +71,7 @@
                 <div class="col l8 offset-l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/images/archie.jpg">
+                            <img src="assets/images/assistantPastorPlaceholder.jpg">
                         </div>
                         <div class="card-content center-align">
                             <h3 id="mainFont" style="margin: 0; padding: 0;">Assistant Pastor</h3>
@@ -87,7 +87,7 @@
                 <div class="col l8 offset-l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/images/stella.JPG">
+                            <img src="assets/images/secretaryPlaceholder.jpg">
                         </div>
                         <div class="card-content center-align">
                             <h3 id="mainFont" style="margin: 0; padding: 0;">Secretary</h3>
@@ -100,7 +100,7 @@
                 <div class="col l8 offset-l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/images/frankie.jpg">
+                            <img src="assets/images/deconPlaceholder.jpg">
                         </div>
                         <div class="card-content center-align">
                             <h3 id="mainFont" style="margin: 0; padding: 0;">Decon</h3>
@@ -116,7 +116,7 @@
                 <div class="col l8 offset-l2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/images/virginia.jpg">
+                            <img src="assets/images/deconessPlaceholder.jpg">
                         </div>
                         <div class="card-content center-align">
                             <h3 id="mainFont" style="margin: 0; padding: 0;">Diaconisa</h3>
